scripts/v1.15.0-cpdp-install/backups/nginx-to-traefik-migration/consolidated-backup/prometheus-system-before.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: kube-prometheus-stack
      meta.helm.sh/release-namespace: prometheus-system
      nginx.ingress.kubernetes.io/whitelist-source-range: 63.34.112.27/32,18.200.217.204/32,108.129.54.220/32,62.250.248.64/32,217.120.32.76/32,86.90.167.198/32,86.95.114.49/32,195.250.152.42/32,31.30.164.224/32,87.213.22.0/24,52.166.251.127/32,10.4.0.0/16
    creationTimestamp: "2025-09-11T14:39:00Z"
    generation: 2
    labels:
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: grafana
      app.kubernetes.io/version: 10.0.3
      helm.sh/chart: grafana-6.58.9
      k8slens-edit-resource-version: v1
    name: kube-prometheus-stack-grafana
    namespace: prometheus-system
    resourceVersion: "44246974"
    uid: 7b28d2fc-17af-4cd2-a9b3-85f48e5caef3
  spec:
    ingressClassName: nginx
    rules:
    - host: grafana.dp1.atsnl-emea.azure.dataplanes.pro
      http:
        paths:
        - backend:
            service:
              name: kube-prometheus-stack-grafana
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 128.251.247.140
kind: List
metadata:
  resourceVersion: ""
